--- a/Styles/general.css
+++ b/Styles/general.css
@@ -9,7 +9,7 @@ body {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
     color: #333;
-    background-color: #f4f4f4;
+    background-color: #F5F8FA;
     padding-top: 60px; /* As we have a fixed navbar */
     padding-bottom: 50px;
 
@@ -26,10 +26,14 @@ header {
     background-position: right top;
     background-repeat: no-repeat;
     background-color: #050318;
-    color: #fff;
-    text-align: center;
+    color: #007DC0;
+    text-align: left;
+    font-weight: bold;
+    font-size: large;
     background-size: contain;
-    padding: 1rem 0;
+    padding: 10px 0;
+    padding-left: 10vw;
+    margin-bottom: 0 !important;
 }
 
 nav#main-nav {
@@ -38,7 +42,7 @@ nav#main-nav {
     left: 0;
     right: 0;
     height: 60px;
-    background-color: #555;
+    background-color: #134169;
     z-index: 1000;
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
@@ -82,7 +86,7 @@ footer {
     height: 50px;
 }
 
-h1, h2, h3 {
+ h2, h3 {
     margin-bottom: 0.75em;
 }
 
