--- a/Styles/general.css
+++ b/Styles/general.css
@@ -32,7 +32,7 @@ header {
     font-size: large;
     background-size: contain;
     padding: 10px 0;
-    padding-left: 10vw;
+    padding-left: 1vw;
     margin-bottom: 0 !important;
 }
 
@@ -104,7 +104,7 @@ a:hover {
 }
 
 /* Shared section styles */
-#about, #services, #contact {
+#about, #services, #contact, #prices {
     background-color: #fff;
     padding: 20px;
     margin-bottom: 20px;
